--- a/templates/admin_temp/admin_add_coupons.html
+++ b/templates/admin_temp/admin_add_coupons.html
@@ -45,11 +45,11 @@
                         <span class="text">Users List</span>
                     </a>
                 </li>
-                {% comment %} <li class="menu-item  ">
-                    <a class="menu-link" href="/admin_banners"> <i class="icon material-icons md-store"></i>
-                        <span class="text">Banners</span>
+                <li class="menu-item  ">
+                    <a class="menu-link" href="/admin_review"> <i class="icon material-icons md-stars"></i>
+                        <span class="text">Reviews</span>
                     </a>
-                </li> {% endcomment %}
+                </li>
             </ul>
             
         </nav>
