--- a/templates/user_temp/user_forgot_password.html
+++ b/templates/user_temp/user_forgot_password.html
@@ -34,12 +34,12 @@
 					<form method="POST" id="login-form" action="{% url 'user_forgot_password' %}">
 						{% csrf_token %}
 						<p>
-							<input type="email" placeholder="Email" name="email" id="email" required>
+							<input class="form-control"  type="email" placeholder="Email" name="email" id="email" required>
 						</p>
 						<p class="forgot-signup-links">
 							<a href="/user_login">Login</a> | <a href="{% url 'user_sign_up' %}">Sign Up</a> 
 						</p>
-						<p><input type="submit" value="SUBMIT"></p>
+						<p><input class="btn btn-black d-block" type="submit" value="SUBMIT"></p>
 					</form>
 				</div>
 			</div>
