--- a/templates/admin_temp/admin_orders.html
+++ b/templates/admin_temp/admin_orders.html
@@ -45,11 +45,11 @@
                         <span class="text">Users List</span>
                     </a>
                 </li>
-                {% comment %} <li class="menu-item  ">
-                    <a class="menu-link" href="/admin_banners"> <i class="icon material-icons md-store"></i>
-                        <span class="text">Banners</span>
+                <li class="menu-item  ">
+                    <a class="menu-link" href="/admin_review"> <i class="icon material-icons md-stars"></i>
+                        <span class="text">Reviews</span>
                     </a>
-                </li> {% endcomment %}
+                </li>
             </ul>
             
         </nav>
@@ -104,8 +104,8 @@
                                             <span class="badge rounded-pill alert-success">Deliverd</span>
                                         {% elif order.status == 'Order Placed' %}
                                             <span class="badge rounded-pill alert-success">Placed</span>
-                                        {% elif order.status == 'Accepted' %}
-                                            <span class="badge rounded-pill alert-warning">Accepted</span>
+                                        {% elif order.status == 'Shipped' %}
+                                            <span class="badge rounded-pill alert-warning">Shipped</span>
                                         {% elif order.status == 'Cancelled' %}
                                             <span class="badge rounded-pill alert-danger">Cancelled</span>
                                         {% elif order.status == 'Returned' %}
@@ -124,7 +124,7 @@
                                             <div class="dropdown-menu">
                                                 
                                                 <a class="dropdown-item" href="{% url 'admin_update_order_status' order.id 'Accepted' %}">
-                                                    <i class="bx bx-check me-1"></i> Accept
+                                                    <i class="bx bx-check me-1"></i> Shipping
                                                 </a>
                                                 <a class="dropdown-item" href="{% url 'admin_update_order_status' order.id 'Delivered' %}">
                                                     <i class="bx bx-user-check me-1"></i> Deliver
@@ -144,7 +144,32 @@
                         </table>
                     </div> <!-- table-responsive //end -->
                 </div> <!-- card-body end// -->
-            </div> <!-- card end// -->
+            </div>
+            <div class="text-center " style="display: flex; justify-content: center; align-items: center;">
+                <nav class="box-pagination">
+                  <ul class="pagination">
+                      {% if orders.has_previous %}
+                      <li class="page-item"><a class="page-link" href="?page={{ orders.previous_page_number }}">&larr;</a></li>
+                      {% else %}
+                      <li class="page-item disabled"><a class="page-link" href="#">&larr;</a></li>
+                      {% endif %}
+          
+                      {% for i in orders.paginator.page_range %}
+                          {% if orders.number == i %}
+                          <li class="page-item active"><a class="page-link" href="?page={{ i }}">{{ i }}</a></li>
+                          {% else %}
+                          <li class="page-item"><a class="page-link" href="?page={{ i }}">{{ i }}</a></li>
+                          {% endif %}
+                      {% endfor %}
+          
+                      {% if orders.has_next %}
+                      <li class="page-item"><a class="page-link" href="?page={{ orders.next_page_number }}">&rarr;</a></li>
+                      {% else %}
+                      <li class="page-item disabled"><a class="page-link" href="#">&rarr;</a></li>
+                      {% endif %}
+                  </ul>
+                </nav>
+            </div>
         </section>
     </main>
 
