--- a/templates/user_temp/user_order.html
+++ b/templates/user_temp/user_order.html
@@ -54,6 +54,7 @@
                     <a class="list-group-item " href="user_address"><i class="fe-icon-user text-muted"></i>Address</a>
                     <a class="list-group-item active " href="#"><i class="fe-icon-user text-muted"></i>Order details</a>
                     <a class="list-group-item " href="/user_change_password"><i class="fe-icon-user text-muted"></i>Change Password</a>
+                    <a class="list-group-item " href="/user_wallet"><i class="fe-icon-user text-muted"></i>My Wallet</a>
                     <hr>
                     <a class="list-group-item " href="/user_logout"><i class="fe-icon-user text-muted"></i>Logout</a>
                 </nav>
@@ -61,48 +62,143 @@
             </div>
             <!-- Profile Settings-->
             <div class="col-lg-8 pb-5">
-            <h2>My Orders</h2>
-            <table class="table table-hover">
-                <thead>
-                  <tr>
-                    <th scope="col">Order #</th>
-                    <th scope="col">Billing Name</th>
-                    <th scope="col">Order Amount</th>
-                    {% comment %} <th scope="col">Order Date</th> {% endcomment %}
-                    <th scope="col">Payment Method</th>
-                    <th scope="col">Order Status</th>
-                    <th scope="col">Change Status</th>
-                  </tr>
-                </thead>
-                <tbody>
-                {% for order in orders %}
+              <h2>My Orders</h2>
+
+
+              <table class="table table-hover">
+                  <thead>
                     <tr>
-                    <td><a href="{% url 'user_order_detailed_view' order.id %}">{{order.order_number}}</a></td>
-                    <td>{{order.address.first_name | capfirst}}</td>
-                    <td>{{order.order_total}}</td>
-                    {% comment %} <td>{{order.created_at}}</td> {% endcomment %}
-                    <td>{{order.payment.payment_method}}</td>
-                    <td>{{order.status}}</td>
-                    <td>
-                            {% if order.status == 'Accepted' %}
-                                <a href="{% url 'user_update_order_status' order.id 'Cancelled' %}" class="btn btn-danger">Cancel</a>
-                            {% elif order.status == 'Delivered' %}
-                                <a href="{% url 'user_update_order_status' order.id 'Return' %}" class="btn btn-warning">Return</a>
-                            {% elif order.status == 'Returned' %}
-                              Order Returned 
-                            {% elif order.status == 'Cancelled' %}
-                              Order Cancelled
-                            {% endif %}
-                        </td>
+                      <th scope="col">Order #</th>
+                      <th scope="col">Billing Name</th>
+                      <th scope="col">Order Amount</th>
+                      {% comment %} <th scope="col">Order Date</th> {% endcomment %}
+                      <th scope="col">Payment Method</th>
+                      <th scope="col">Order Status</th>
+                      <th scope="col">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
+                          <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
+                          <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z"/>
+                        </svg>
+                      </th>
                     </tr>
-                {% endfor %}
-                </tbody>
+                  </thead>
+                  <tbody>
+                  {% for order in orders %}
+                      <tr>
+                      <td><a href="{% url 'user_order_detailed_view' order.id %}">{{order.order_number}}</a></td>
+                      <td>{{order.address.first_name | capfirst}}</td>
+                      <td>{{order.order_total}}</td>
+                      <td>{{order.payment.payment_method}}</td>
+                      <td>
+                        {% if order.status == 'Delivered' %}
+                                <span class="btn-sm btn-success">Delivered
+                                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-fill" viewBox="0 0 16 16">
+                                    <path fill-rule="evenodd" d="M15.528 2.973a.75.75 0 0 1 .472.696v8.662a.75.75 0 0 1-.472.696l-7.25 2.9a.75.75 0 0 1-.557 0l-7.25-2.9A.75.75 0 0 1 0 12.331V3.669a.75.75 0 0 1 .471-.696L7.443.184l.004-.001.274-.11a.75.75 0 0 1 .558 0l.274.11.004.001 6.971 2.789Zm-1.374.527L8 5.962 1.846 3.5 1 3.839v.4l6.5 2.6v7.922l.5.2.5-.2V6.84l6.5-2.6v-.4l-.846-.339Z"/>
+                                  </svg>
+                                </span>
+                            {% elif order.status == 'Order Placed' %}
+                                <span class="btn-sm btn-success">OrderPlaced
+                                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check2-circle" viewBox="0 0 16 16">
+                                    <path d="M2.5 8a5.5 5.5 0 0 1 8.25-4.764.5.5 0 0 0 .5-.866A6.5 6.5 0 1 0 14.5 8a.5.5 0 0 0-1 0 5.5 5.5 0 1 1-11 0z"/>
+                                    <path d="M15.354 3.354a.5.5 0 0 0-.708-.708L8 9.293 5.354 6.646a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0l7-7z"/>
+                                  </svg>
+                                </span>
+                            {% elif order.status == 'Shipped' %}
+                                <span class="btn-sm btn-warning">Shipped 
+                                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-truck" viewBox="0 0 16 16">
+                                  <path d="M0 3.5A1.5 1.5 0 0 1 1.5 2h9A1.5 1.5 0 0 1 12 3.5V5h1.02a1.5 1.5 0 0 1 1.17.563l1.481 1.85a1.5 1.5 0 0 1 .329.938V10.5a1.5 1.5 0 0 1-1.5 1.5H14a2 2 0 1 1-4 0H5a2 2 0 1 1-3.998-.085A1.5 1.5 0 0 1 0 10.5v-7zm1.294 7.456A1.999 1.999 0 0 1 4.732 11h5.536a2.01 2.01 0 0 1 .732-.732V3.5a.5.5 0 0 0-.5-.5h-9a.5.5 0 0 0-.5.5v7a.5.5 0 0 0 .294.456zM12 10a2 2 0 0 1 1.732 1h.768a.5.5 0 0 0 .5-.5V8.35a.5.5 0 0 0-.11-.312l-1.48-1.85A.5.5 0 0 0 13.02 6H12v4zm-9 1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm9 0a1 1 0 1 0 0 2 1 1 0 0 0 0-2z"/>
+                                </svg>
+                              </span>
+                            {% elif order.status == 'Cancelled' %}
+                                <span class="btn-sm  btn-danger">Cancelled 
+                                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x-circle-fill" viewBox="0 0 16 16">
+                                    <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM5.354 4.646a.5.5 0 1 0-.708.708L7.293 8l-2.647 2.646a.5.5 0 0 0 .708.708L8 8.707l2.646 2.647a.5.5 0 0 0 .708-.708L8.707 8l2.647-2.646a.5.5 0 0 0-.708-.708L8 7.293 5.354 4.646z"/>
+                                  </svg>
+                                </span>
+                            {% elif order.status == 'Returned' %}
+                                <span class="btn-sm btn-danger">Return
+                                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-return-left" viewBox="0 0 16 16">
+                                    <path fill-rule="evenodd" d="M14.5 1.5a.5.5 0 0 1 .5.5v4.8a2.5 2.5 0 0 1-2.5 2.5H2.707l3.347 3.346a.5.5 0 0 1-.708.708l-4.2-4.2a.5.5 0 0 1 0-.708l4-4a.5.5 0 1 1 .708.708L2.707 8.3H12.5A1.5 1.5 0 0 0 14 6.8V2a.5.5 0 0 1 .5-.5z"/>
+                                  </svg>
+                                </span>
+                            {% elif order.status == 'Return Pending' %}
+                                <span class="btn-sm btn-danger">Return
+                                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-return-left" viewBox="0 0 16 16">
+                                    <path fill-rule="evenodd" d="M14.5 1.5a.5.5 0 0 1 .5.5v4.8a2.5 2.5 0 0 1-2.5 2.5H2.707l3.347 3.346a.5.5 0 0 1-.708.708l-4.2-4.2a.5.5 0 0 1 0-.708l4-4a.5.5 0 1 1 .708.708L2.707 8.3H12.5A1.5 1.5 0 0 0 14 6.8V2a.5.5 0 0 1 .5-.5z"/>
+                                  </svg>
+                                </span>
+                            {% endif %}
+                      </td>
+                      <td>
+                          {% if order.status == 'Shipped' %}
+                            <a href="{% url 'user_update_order_status' order.id 'Cancelled' %}" class="btn-sm" style="background-color: red; color: white; border: none;">Cancel</a>
+                          {% elif order.status == 'Order Placed' %}
+                            <a href="{% url 'user_update_order_status' order.id 'Cancelled' %}" class="btn-sm" style="background-color: red; color: white; border: none;">Cancel</a>
+                          {% elif order.status == 'Delivered' %}
+                            <button type="button" class="btn-sm btn-warning"  data-toggle="modal" data-target="#returnReasonModal">Return</button>
+                              <div class="modal fade" id="returnReasonModal" tabindex="-1" role="dialog" aria-labelledby="returnReasonModalLabel" aria-hidden="true">
+                                <div class="modal-dialog" role="document">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h5 class="modal-title" id="returnReasonModalLabel">Return Reason</h5>
+                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                <span aria-hidden="true">&times;</span>
+                                            </button>
+                                        </div>
+                                        <div class="modal-body">
+                                          <form id="returnReasonForm" method="post" action="{% url 'user_update_order_status' order.id 'Return' %}">
+                                            {% csrf_token %}
+                                            <div class="form-group">
+                                                <label for="return_reason">Reason for Return</label>
+                                                <textarea class="form-control" id="return_reason" name="return_reason" rows="4" required></textarea>
+                                            </div>
+                                            <button type="submit" class="btn btn-warning">Submit Return Reason</button>
+                                        </form>          
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                          {% elif order.status == 'Returned' %}
+                            <a class="btn-secondary btn-sm">Returned</a>
+                          {% elif order.status == 'Return Pending' %}
+                          <a class="btn-secondary btn-sm">Pending</a>
+                            
+                          {% elif order.status == 'Cancelled' %}
+                            <a class="btn-secondary btn-sm">Cancelled</a>
+                          {% endif %}
+                      </td>
+                      </tr>
+                  {% endfor %}
+                  </tbody>
               </table>
+              <div class="text-center mt-50">
+                <nav class="box-pagination">
+                  <ul class="pagination">
+                      {% if orders.has_previous %}
+                      <li class="page-item"><a class="page-link" href="?page={{ orders.previous_page_number }}">&larr;</a></li>
+                      {% else %}
+                      <li class="page-item disabled"><a class="page-link" href="#">&larr;</a></li>
+                      {% endif %}
+          
+                      {% for i in orders.paginator.page_range %}
+                          {% if orders.number == i %}
+                          <li class="page-item active"><a class="page-link" href="?page={{ i }}">{{ i }}</a></li>
+                          {% else %}
+                          <li class="page-item"><a class="page-link" href="?page={{ i }}">{{ i }}</a></li>
+                          {% endif %}
+                      {% endfor %}
+          
+                      {% if orders.has_next %}
+                      <li class="page-item"><a class="page-link" href="?page={{ orders.next_page_number }}">&rarr;</a></li>
+                      {% else %}
+                      <li class="page-item disabled"><a class="page-link" href="#">&rarr;</a></li>
+                      {% endif %}
+                  </ul>
+                </nav>
+              </div>
             </div>
           </div>
-          
       </div>
-      
   </section>
   
 </main> 
