--- a/templates/user_temp/user_profile.html
+++ b/templates/user_temp/user_profile.html
@@ -50,10 +50,11 @@
               </div>
               <div class="wizard">
                 <nav class="list-group list-group-flush">
-                    <a class="list-group-item active" href="/user_profile"><i class="fe-icon-user text-muted"></i>Profile Settings</a>
+                    <a class="list-group-item active" href="/user_profile"><i class="fe-icon-user text-muted"></i>Profile</a>
                     <a class="list-group-item " href="/user_address"><i class="fe-icon-user text-muted"></i>Address</a>
                     <a class="list-group-item " href="/user_order"><i class="fe-icon-user text-muted"></i>Order details</a>
                     <a class="list-group-item " href="/user_change_password"><i class="fe-icon-user text-muted"></i>Change Password</a>
+                    <a class="list-group-item " href="/user_wallet"><i class="fe-icon-user text-muted"></i>My Wallet</a>
                     <hr>
                     <a class="list-group-item " href="/user_logout"><i class="fe-icon-user text-muted"></i>Logout</a>
                 </nav>
@@ -115,17 +116,6 @@
                   <div
                     class="d-flex flex-wrap justify-content-between align-items-center"
                   >
-                    <div class="custom-control custom-checkbox d-block">
-                      <input
-                        class="custom-control-input"
-                        type="checkbox"
-                        id="subscribe_me"
-                        checked=""
-                      />
-                      <label class="custom-control-label" for="subscribe_me"
-                        >Subscribe me to Newsletter</label
-                      >
-                    </div>
                     <a
                       class="btn btn-style-1 btn-dark"
                       href="/user_profile_edit"
