--- a/templates/user_temp/user_profile_edit.html
+++ b/templates/user_temp/user_profile_edit.html
@@ -37,11 +37,12 @@
                     </div>
                     <div class="wizard">
                         <nav class="list-group list-group-flush">
-                            <a class="list-group-item active" href="#"><i class="fe-icon-user text-muted"></i>Profile Settings</a>
+                            <a class="list-group-item active" href="#"><i class="fe-icon-user text-muted"></i>Profile</a>
                             <a class="list-group-item " href="/user_address"><i class="fe-icon-user text-muted"></i>Address</a>
                             <a class="list-group-item " href="#"><i class="fe-icon-user text-muted"></i>Order details</a>
                             <a class="list-group-item " href="/user_change_password"><i class="fe-icon-user text-muted"></i>Change Password</a>
-    
+                            <a class="list-group-item " href="/user_wallet"><i class="fe-icon-user text-muted"></i>My Wallet</a>
+                            <br>
                             <a class="list-group-item " href="/user_logout"><i class="fe-icon-user text-muted"></i>Logout</a>
                         </nav>
                     </div>
