--- a/templates/user_temp/user_sign_up.html
+++ b/templates/user_temp/user_sign_up.html
@@ -31,53 +31,47 @@
           <form method="POST" id="signup-form" action="{% url 'user_sign_up' %}">
             {% csrf_token %}
             <div class="form-group">
-              <label for="first_name"></label>
-              {{ form.first_name }}
+              <label class="form-control" for="first_name">{{ form.first_name }}</label>
               {% if form.first_name.errors %}
                 <span class="text-danger">{{ form.first_name.errors.0 }}</span>
               {% endif %}
             </div>
             <div class="form-group">
-              <label for="last_name"></label>
-              {{ form.last_name }}
+              <label class="form-control" for="last_name">{{ form.last_name }}</label>
               {% if form.last_name.errors %}
                 <span class="text-danger">{{ form.last_name.errors.0 }}</span>
               {% endif %}
             </div>
             <div class="form-group">
-              <label for="email"></label>
-              {{ form.email }}
+              <label class="form-control" for="email">{{ form.email }}</label>
               {% if form.email.errors %}
                 <span class="text-danger">{{ form.email.errors.0 }}</span>
               {% endif %}
             </div>
             <div class="form-group">
-              <label for="mobile"></label>
-              {{ form.mobile }}
+              <label class="form-control" for="mobile">{{ form.mobile }}</label>
               {% if form.mobile.errors %}
                 <span class="text-danger">{{ form.mobile.errors.0 }}</span>
               {% endif %}
             </div>
             <div class="form-group">
-              <label for="password"></label>
-              {{ form.password }}
+              <label class="form-control" for="password">{{ form.password }}</label>
               {% if form.password.errors %}
                 <span class="text-danger">{{ form.password.errors.0 }}</span>
               {% endif %}
             </div>
             <div class="form-group">
-              <label for="confirm_password" class="checkout__input"></label>
-              {{ form.confirm_password }}
+              <label class="form-control" for="confirm_password" class="checkout__input">{{ form.confirm_password }}</label>
               {% if form.non_field_errors %}
                 <span class="text-danger">{{ form.non_field_errors.0 }}</span>
               {% endif %}
             </div>
+            <div class="form-group">
+              <input type="submit" class="btn btn-black d-block"value="Sign Up">
+            </div>
             <p class="forgot-signup-links">
               Already have an account? <a href="/user_login">Login</a>
             </p>
-            <div class="form-group">
-              <input type="submit" class="site-btn"value="Sign Up">
-            </div>
           </form>
         </div>
       </div>
