--- a/templates/user_temp/user_order_detailed_view.html
+++ b/templates/user_temp/user_order_detailed_view.html
@@ -1,6 +1,6 @@
 {% extends 'user_temp/base.html' %} 
 {% load static %} 
-{% block title%}OEDER DETAILS{%endblock title %}
+{% block title%}ORDER DETAILS{%endblock title %}
 {% block body %}
 
 <!-- Breadcrumb Section Begin -->
@@ -24,6 +24,7 @@
 <div class="container mt-5">
     <main class="main-wrap">
         <section class="content-main">
+
         {% for i in orders %}
             {% with order=orders.0 order_product=order_products payment=payments.0 %}
             <div class="content-header">
@@ -32,130 +33,159 @@
                     <p>Details for Order ID: {{order.order_number}}</p>
                 </div>
             </div>
-            <div class="panel-body p30">
-                <div class="row">
-                    
-                    <div class="col-lg-12">
-                        <div class="invoice-from">
-                            <ul class="list-unstyled text-right">
-                                <li><strong>Order Number:</strong> {{ order.order_number }}</li>
-                                <li><strong>Payment Method:</strong> {{ payment.payment_method }}</li>
-                                <li><strong>Order Total:</strong> {{ order.order_total }}</li>
-                                <li><strong>Order Date:</strong> {{ order.created_at }}</li>
-                                <li><strong>Status:</strong> {{ payment.status }}</li>
-                            </ul>
+            <div class="card">
+                <header class="card-header">
+                    <div class="row align-items-center">
+                        <div class="col-lg-6 col-md-6 mb-lg-0 mb-15">
+                            <span>
+                                <i class="material-icons md-calendar_today"></i> <b>{{order.created_at}}</b>
+                            </span> 
                         </div>
                     </div>
-                    <div class="col-lg-12">
-                 
-                        <div class="invoice-details mt25">
-                            <div class="well">
-                                <ul class="list-unstyled mb0">
-                                    <br>
-                                    <li><strong>ADDRESS DETAILS</strong></li>
-                                    <li>{{ order.address.first_name }} {{ order.address.last_name }}</li>
-                                    <li>{{order.address.address_line_1 }}</li>
-                                    <li>{{ order.address.city }}, {{ order.address.state }} {{ order.address.pin }}</li>
-                                    <li>{{ order.address.country }}</li>
-                                </ul>
-                            </div>
-                        </div>
-                       
-                        <div class="invoice-items">
-                            <div class="table-responsive" style="overflow: hidden; outline: none;" tabindex="0">
-                                <table class="table table-bordered">
+                </header> <!-- card-header end// -->
+                <div class="card-body">
+                    <div class="row mb-50 mt-20 order-info-wrap">
+                        <div class="col-md-4">
+                            <article class="icontext align-items-start">
+                                <span class="icon icon-sm rounded-circle bg-primary-light">
+                                    <i class="text-primary material-icons md-person"></i>
+                                </span>
+                                <div class="text">
+                                    <h6 class="mb-1">Customer</h6>
+                                    <p class="mb-1">
+                                        {{order.address.first_name}}{{order.address.last_name}}<br>{{order.address.phone}}
+                                    </p>
+                                    <a href="#">View profile</a>
+                                </div>
+                            </article>
+                        </div> <!-- col// -->
+                        <div class="col-md-4">
+                            <article class="icontext align-items-start">
+                                <span class="icon icon-sm rounded-circle bg-primary-light">
+                                    <i class="text-primary material-icons md-local_shipping"></i>
+                                </span>
+                                <div class="text">
+                                    <h6 class="mb-1">Order info</h6>
+                                    <p class="mb-1">
+                                        Shipping: Standard <br> Pay method:{{payment.payment_method}} <br> Status: {{payment.status}}
+                                    </p>
+                                </div>
+                            </article>
+                        </div> <!-- col// -->
+                        <div class="col-md-4">
+                            <article class="icontext align-items-start">
+                                <span class="icon icon-sm rounded-circle bg-primary-light">
+                                    <i class="text-primary material-icons md-place"></i>
+                                </span>
+                                <div class="text">
+                                    <h6 class="mb-1">Deliver to</h6>
+                                    <p class="mb-1">
+                                        {{order.address.address_line_1}},{{order.address.address_line_2}} <br>{{order.address.city}},{{order.address.state}},{{order.address.country}}<br> PIN {{order.address.pin}} 
+                                    </p>
+                                </div>
+                            </article>
+                        </div> <!-- col// -->
+                    </div> <!-- row // -->
+                    <div class="row">
+                        <div class="col-lg-7">
+                            <div class="table-responsive">
+                                <table class="table">
                                     <thead>
                                         <tr>
-                                            <th class="per70 text-center">Description</th>
-                                            <th class="per5 text-center">Qty</th>
-                                            <th class="per25 text-center">Total</th>
+                                            <th width="40%">Product</th>
+                                            <th width="20%">Unit Price</th>
+                                            <th width="20%">Quantity</th>
+                                            <th width="20%" class="text-end">Total</th>
                                         </tr>
                                     </thead>
                                     <tbody>
-                                        {% for order_product in order.orderproduct_set.all %}
+                                        
+                                        {% for order_product in order_products %}
                                             <tr>
-                                                <td>{{ order_product.product.product_name }}</td>
-                                                <td class="text-center">{{ order_product.quantity }}</td>
-                                                <td class="text-center">{{ order_product.product_price }}</td>
+                                                <td>
+                                                    <a class="itemside" href="#">
+                                                        <div class="left">
+                                                            <img src="{{ order_product.product.product_images.url }}" width="40" height="40" class="img-xs" alt="Item">
+                                                        </div>
+                                                        <div class="info"> {{order_product.product.product_name}}</div>
+                                                    </a>
+                                                </td>
+                                                <td> ${{order_product.product.price}} </td>
+                                                <td> {{order_product.quantity}} </td>
+                                                <td class="text-end">{{order_product.single_product_total}}</td>
                                             </tr>
                                         {% endfor %}
+                                        <tr>
+                                            <td colspan="4">
+                                                <article class="float-end">
+                                                    {% comment %} <dl class="dlist">
+                                                        <dt>Subtotal:</dt>
+                                                        <dd>$973.35</dd>
+                                                    </dl>
+                                                    <dl class="dlist">
+                                                        <dt>Shipping cost:</dt>
+                                                        <dd>$10.00</dd>
+                                                    </dl> {% endcomment %}
+                                                    <dl class="dlist">
+                                                        <dt>Grand total:</dt>
+                                                        <dd> <b class="h5">${{order.order_total}}</b> </dd>
+                                                    </dl>
+                                                    <dl class="dlist">
+                                                        <dt class="text-muted">Status:
+                                                            {% if order.status == 'Delivered' %}
+                                                                <span class="badge rounded-pill alert-success">Deliverd</span>
+                                                            {% elif order.status == 'Order Placed' %}
+                                                                <span class="badge rounded-pill alert-success">Placed</span>
+                                                            {% elif order.status == 'Shipped' %}
+                                                                <span class="badge rounded-pill alert-warning">Shipped</span>
+                                                            {% elif order.status == 'Cancelled' %}
+                                                                <span class="badge rounded-pill alert-danger">Cancelled</span>
+                                                            {% elif order.status == 'Returned' %}
+                                                                <span class="badge rounded-pill alert-danger">Returned</span>
+                                                            {% elif order.status == 'Return Pending' %}
+                                                                <span class="badge rounded-pill alert-danger">Return Pending</span>
+                                                            {% endif %}
+                                                        </dt>
+                                                        <dd>
+                                                            <span class="badge rounded-pill alert-success text-success">{{payment.status}}</span>
+                                                        </dd>
+                                                    </dl>
+                                                </article>
+                                            </td>
+                                        </tr>
                                     </tbody>
-                                    <tfoot>
-                                        <tr>
-                                            <th colspan="2" class="text-right">Sub Total:</th>
-                                            <th class="text-center">&#8377;&nbsp;{{ order.order_total }}</th>
-                                        </tr>
-                                        <tr>
-                                            <th colspan="2" class="text-right">Tax:</th>
-                                            <th class="text-center">&#8377;&nbsp;0</th>
-                                        </tr>
-                                        
-                                        <tr>
-                                            <th colspan="2" class="text-right">Grand Total:</th>
-                                            <th class="text-center">&#8377;&nbsp;{{ order.order_total }}</th>
-                                        </tr>
-                                    </tfoot>
                                 </table>
+                            </div> <!-- table-responsive// -->
+                        </div> <!-- col// -->
+                        <div class="col-lg-1"></div>
+                        <div class="col-lg-4">
+                            <div class="box shadow-sm bg-light">
+                                <h5 >Payment info</h5><br>
+                                <p>
+                                   <h6>Tranc ID:{{payment.payment_id}}</h6>
+                                   <h6>{{payment.payment_method}}</h6>
+                                   <h6>{{payment.status}}</h6>
+                                </p>
                             </div>
-                            <a class="btn btn-secondary print ms-2" href="#">Download Invoice</a>
-
-                            <!-- Button trigger modal -->
-                            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-                                Review
-                            </button>
-                            
-                            <!-- Modal -->
-                            <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                                <div class="modal-dialog" role="document">
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                    <h5 class="modal-title" id="exampleModalLabel">Write Your Review</h5>
-                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                        <span aria-hidden="true">&times;</span>
-                                    </button>
-                                    </div>
-                                    <div class="modal-body">
-                                        <div class="block-form-comment">
-                                            <form method="POST" id="review_submit" action="{% url 'user_sumbit_review' order_products.0.product.id %}">
-                                                {% csrf_token %}
-                                                <div class="row">
-                                                    <div class="col-lg-12">
-                                                        <div class="form-group">
-                                                        <input class="form-control" type="text" placeholder="Tittle" name="subject">
-                                                        </div>
-                                                    </div>
-                                                    <div class="col-lg-12">
-                                                        <div class="form-group">
-                                                        <textarea class="form-control" placeholder="Review" rows="5"  name="review" required></textarea>
-                                                        </div>
-                                                    </div>
-                                                    <div class="col-lg-12">
-                                                        <div class="text-center mt-10">
-                                                        <button type="submit" class="btn btn-red">Post Review</button>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </form>
-                                        </div>
-                                    </div>
-
+                        </div> 
+                        {% if order.status == 'Return Pending' %}
+                            <div class="col-lg-4">
+                                <div class="box shadow-sm bg-light">
+                                    <h5 >Reutrn Reason</h5><br>
+                                    <h6>{{order.status}}</h6>
+                                    </p>
                                 </div>
-                                </div>
-                            </div>
-
-                        </div>
-                        <div class="invoice-footer mt25">
-                            <p class="text-center">Thank you for shopping with us!</p>
-                        </div>
+                            </div> 
+                        {% endif %}
                     </div>
-                </div>
-            </div>
+                </div> 
+                <a class="btn btn-secondary print ms-2" href="{% url 'user_order_invoice' order.id %}"><i class="icon material-icons md-print"></i></a>
+            </div> 
             {% endwith %}
         {% endfor %}
 
         </section>
     </main>
-
 </div>
 
 {% endblock body %}
