--- a/templates/user_temp/user_profile.html
+++ b/templates/user_temp/user_profile.html
@@ -4,13 +4,12 @@
 {% block body %}
 
 <main class="main">
-  <section class="section block-banner-shop"> 
+  <section class="section block-banner-shop" style="background-image: url({% static 'img/banner/banner_pro.jpg' %});"> 
     <div class="container"> 
-      <h1 class="text-56-medium">PROFILE</h1>
       <div class="breadcrumbs"> 
         <ul> 
           <li> <a href="/">Home </a></li>
-          <li> <a href="/user_profile">Profile</a></li>
+          <li> <a href="">Profile</a></li>
         </ul>
       </div>
     </div>
